--- a/socketio-server/package.json
+++ b/socketio-server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "start": "ts-node ./src/server",
+    "start": "ts-node ./src/server.ts",
     "dev": "nodemon"
   },
   "dependencies": {
